# otcuba

./: CMakeLists.txt  README.rst
cmake/: OTCubaConfig.cmake.in  UseOTCuba.cmake
distro/debian/: changelog  control  rules
distro/rpm/: otcuba.spec
distro/windows/: README.txt  installer.nsi
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/otcuba/: OTCuba.hxx  OTCubaprivate.hxx
lib/src/: CMakeLists.txt  VegasAlgorithm.cxx  VegasAlgorithmImplementation.cxx
lib/src/otcuba/: VegasAlgorithm.hxx  VegasAlgorithmImplementation.hxx
lib/test/: CMakeLists.txt  t_VegasAlgorithm_std.cxx  t_VegasAlgorithm_std.expout
python/doc/: conf.py.in  index.rst
python/doc/developer_guide/architecture/: architecture.rst
python/doc/user_manual/: user_manual.rst
python/src/: CMakeLists.txt  VegasAlgorithm.i  VegasAlgorithmImplementation.i  VegasAlgorithmImplementation_doc.i.in  VegasAlgorithm_doc.i.in  __init__.py  otcuba_module.i
python/test/: CMakeLists.txt  t_VegasAlgorithm_std.expout  t_VegasAlgorithm_std.py  t_docstring.expout  t_docstring.py
